upgpkg: sweethome3d 6.5-3
git-svn-id: file:///srv/repos/svn-community/svn@967622 9fca08f4-af9d-4005-b8df-a31f2cc04f65